# NASA-RMC-2020-NorthstarRobotics

./: .cproject  .gitignore  .gitmodules  .mxproject  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  GitSubmoduleUpdateScript.txt  HowToPush  LICENSE  NASA-RMC-RT.ioc  README.md  Ros_Kinetic_ReqPkgs.sh  Ros_Melodic_ReqPkgs.sh  STM32F303RETx_FLASH.ld  SendToRovr.sh  StartupTeleopMC.sh  StartupTeleopRovr.sh  freeze-ros-pkgs  installationHelp.txt  rmcbuild  rmcrun  rospkgs  ssh_setup  unfreeze-ros-pkgs
.github/workflows/: clang-format-inc.yml  clang-format-src.yml
Inc/: FreeRTOSConfig.h  RTE_Components.h  VESC.h  VESC.hpp  achoo_controller.h  can_manager.h  can_manager.hpp  drivetrain_controller.h  main.h  relay.h  rt_conf.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h
STM32/: .cproject  .gitignore  .mxproject  .project  CMakeLists_template.txt  NASA-RMC-RT.ioc  NOTES  run-format.sh
STM32/Inc/: VESC.h  buffer.h  gesundheit_controller.h  main.h  print.h  rt_conf.h  sneeze_controller.h  stm32f3xx_hal_conf.h  types.h
STM32/Src/: VESC.c  buffer.c  drivetrain_controller.c  gesundheit_controller.c  main.c  print.c  relay.c  sneeze_controller.c  stm32f3xx_hal_msp.c  stm32f3xx_hal_timebase_tim.c  syscalls.c
Src/: VESC.c  VESC.cpp  achoo_controller.c  can_manager.c  can_manager.cpp  drivetrain_controller.c  freertos.c  main.c  stm32f3xx_hal_msp.c  stm32f3xx_hal_timebase_tim.c  stm32f3xx_it.c  syscalls.c  system_stm32f3xx.c
bigrdigr_description/: CMakeLists.txt  package.xml
bigrdigr_description/launch/: display.launch
bigrdigr_description/meshes/: wheel_1.STL  wheel_3.STL
bigrdigr_description/urdf/: bigrdigr.urdf.xacro  robot.gazebo.xacro
documentation/: README.md  ZeroToDocker.md
documentation/doc/: io_config.txt  jetson_can.txt
documentation/examples/src/: example_node.cpp  navx_node.cpp
gui_dev/editabletreemodelRMC/: mainwindow.cpp  mainwindow.h  mainwindow.ui
gui_dev/generator/editabletreemodelRMC/: mainwindow.cpp  mainwindow.ui
src/: README.md
src/bigrdigr_bringup/: CMakeLists.txt  package.xml
src/bigrdigr_bringup/config/: realsense_d415.yml
src/bigrdigr_bringup/doc/: bldc_vescs.txt  udevInfo.txt
src/bigrdigr_bringup/scripts/: 10-rovr19.rules  can_jetson_setup  can_vscom_setup
src/bigrdigr_bringup/src/: navx_node.cpp  teleop_twist_node.cpp
src/bigrdigr_common/: CMakeLists.txt  bag_record.launch  package.xml
src/bigrdigr_common/scripts/: SubmoduleUpdateScript.sh  interfaces  video_server.sh
src/bigrdigr_control/: CMakeLists.txt  package.xml
src/bigrdigr_control/config/: bigrdigr_control.yaml  bigrdigr_controllers.yaml  control.yaml  ekf_map_params.yaml  ekf_params.yaml
src/bigrdigr_control/launch/: bigrdigr_control.launch  bigrdigr_controlV2.launch  canbus_control.launch  gazebo_control.launch  local_teleop_onboard_direct.launch  localization.launch  main_mc_teleop_direct.launch  main_onboard_direct.launch  main_rovr_teleop_direct.launch  main_teleop_onboard_direct.launch  to_mc.launch  to_robot.launch
src/bigrdigr_control/src/: joy_to_onboard_direct_node.cpp  joy_updated_onboard.cpp  mc_to_robot.cpp  robot_to_mc.cpp
src/bigrdigr_description/: DevLog.txt  package.xml
src/bigrdigr_description/launch/: description.launch
src/bigrdigr_description/meshes/: base_link.STL  bigrdigr.gazebo.xacro  (+1 more)
src/bigrdigr_gazebo/: CMakeLists.txt  package.xml
src/bigrdigr_input/: CMakeLists.txt  DevLog
src/bigrdigr_navigation/: CMakeLists.txt
src/decawave/: CMakeLists.txt  library_installation_notes.txt  package.xml
src/formatter-string/: CMakeLists.txt  package.xml
src/formatter_string/: CMakeLists.txt  Devlog  package.xml
src/rgbd_pose_estimation/: CMakeLists.txt
src/rovr_bringup/: CMakeLists.txt  package.xml
src/rovr_common/: CMakeLists.txt  package.xml
src/rovr_control/: CMakeLists.txt  package.xml
src/rovr_control/config/: bigrdigr_control.yaml  control.yaml  rovr_control.yaml
src/rovr_control/launch/: bigrdigr_control.launch  bigrdigr_controlV2.launch  canbus_control.launch  direct_control.launch  gazebo_control.launch  highlevel_control.launch  human_control.launch  local_teleop_onboard_direct.launch  localization.launch  main_mc_teleop.launch  main_mc_teleop_direct.launch  main_onboard_direct.launch  main_onboard_highlevel.launch  main_rovr_teleop_direct.launch  main_rovr_teleop_highlevel.launch  main_sim_human.launch
src/rovr_control/launch/nodes/: joy_to_onboard_direct_node.launch  mc_to_robot_node.launch  robot_to_mc_node.launch
src/rovr_control/scripts/: main_mc_launch.sh
src/rovr_control/src/: joy_to_onboard_direct_node.cpp  teleop_twist_node.cpp
src/rovr_control/src/telecom_nodes/: mc_to_robot_node.cpp  recv_cmd_vel_node.cpp  robot_joy_to_mc.cpp  robot_to_mc_node.cpp
src/rovr_control/src/wheel_io_nodes/: can_to_wheel_fdbk_node.cpp  cmd_vel_to_wheel_cmd.cpp  wheel_cmd_to_can_node.cpp  wheel_fdbk_to_odom_node.cpp
src/rovr_description/: CMakeLists.txt  README.md  package.xml
src/rovr_gazebo/: CMakeLists.txt  DevLog  package.xml
src/rovr_input/: CMakeLists.txt  package.xml
src/rovr_navigation/: CMakeLists.txt  aruco_localization_devlog.txt  package.xml
src/rovr_navigation/config/: costmap_common.yaml  ekf_map_params.yaml  ekf_params.yaml  rmc_map.yaml
src/rovr_navigation/launch/: aruco_localization.launch  ekf_imu_and_dw.launch  ekf_imu_and_odom.launch  ekf_imu_dw_and_odom.launch  ekf_map.launch  ekf_odom.launch  map.launch  mapping.launch  move_base.launch  navigation.launch  pc_filter.launch  trough_alighnment.launch
src/rovr_navigation/src/: auto_dock_node.cpp  pc_filter_node.cpp
src/rovr_navigation/test/: aruco_pipeline.launch  aruco_pipeline_with_bag_files.launch  aruco_pipeline_with_ekf.launch
src/stm32_bridge/: CMakeLists.txt  package.xml
src/stm32_bridge/launch/: stm32_bridge.launch
src/stm32_bridge/msg/: ACHOOCmd.msg  BLESSYOUPositionCmd.msg  BLESSYOUSpeedCmd.msg  GESUNDHEITDoorCmd.msg  GESUNDHEITExtendCmd.msg  GESUNDHEITSpeedCmd.msg  SNEEZEDigSpeedCmd.msg  SNEEZEHomeCmd.msg  SNEEZETransSpeedCmd.msg
src/stm32_bridge/src/: stm32_bridge_node.cpp
src/telecom/: CMakeLists.txt  package.xml
(+117 files in other folders)
