<?xml version="1.0"?>
<package format="2">
  <name>stm32_bridge</name>
  <version>1.0.0</version>
  <description>STM32 CAN translator bridge</description>
  <author email="schat127@umn.edu">Julia Schatz</author>
  <maintainer email="schat127@umn.edu">Julia Schatz</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>socketcan_bridge</depend>
  <depend>can_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
